include_ver_2_beta_2/freetype.h

  
  typedef unsigned char  FT_Bool;
  typedef char  FT_String;
  typedef unsigned short  FT_UShort;
  typedef int  FT_Int;
  typedef unsigned int  FT_UInt;
  typedef signed long  FT_Fixed;
  typedef int  FT_Error;
  typedef struct  FT_Matrix_
  {
    FT_Fixed  xx, xy;
    FT_Fixed  yx, yy;
  } FT_Matrix;