lib/src/generated_bindings.dart


  /// @function:
  /// FT_Face_Properties
  ///
  /// @description:
  /// Set or override certain (library or module-wide) properties on a
  /// face-by-face basis.  Useful for finer-grained control and avoiding
  /// locks on shared structures (threads can modify their own faces as they
  /// see fit).
  ///
  /// Contrary to @FT_Property_Set, this function uses @FT_Parameter so that
  /// you can pass multiple properties to the target face in one call.  Note
  /// that only a subset of the available properties can be controlled.
  ///
  /// * @FT_PARAM_TAG_STEM_DARKENING (stem darkening, corresponding to the
  /// property `no-stem-darkening` provided by the 'autofit', 'cff',
  /// 'type1', and 't1cid' modules; see @no-stem-darkening).
  ///
  /// * @FT_PARAM_TAG_LCD_FILTER_WEIGHTS (LCD filter weights, corresponding
  /// to function @FT_Library_SetLcdFilterWeights).
  ///
  /// * @FT_PARAM_TAG_RANDOM_SEED (seed value for the CFF, Type~1, and CID
  /// 'random' operator, corresponding to the `random-seed` property
  /// provided by the 'cff', 'type1', and 't1cid' modules; see
  /// @random-seed).
  ///
  /// Pass `NULL` as `data` in @FT_Parameter for a given tag to reset the
  /// option and use the library or module default again.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// num_properties ::
  /// The number of properties that follow.
  ///
  /// properties ::
  /// A handle to an @FT_Parameter array with `num_properties` elements.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @example:
  /// Here is an example that sets three properties.  You must define
  /// `FT_CONFIG_OPTION_SUBPIXEL_RENDERING` to make the LCD filter examples
  /// work.
  ///
  /// ```
  /// FT_Parameter         property1;
  /// FT_Bool              darken_stems = 1;
  ///
  /// FT_Parameter         property2;
  /// FT_LcdFiveTapFilter  custom_weight =
  /// { 0x11, 0x44, 0x56, 0x44, 0x11 };
  ///
  /// FT_Parameter         property3;
  /// FT_Int32             random_seed = 314159265;
  ///
  /// FT_Parameter         properties[3] = { property1,
  /// property2,
  /// property3 };
  ///
  ///
  /// property1.tag  = FT_PARAM_TAG_STEM_DARKENING;
  /// property1.data = &darken_stems;
  ///
  /// property2.tag  = FT_PARAM_TAG_LCD_FILTER_WEIGHTS;
  /// property2.data = custom_weight;
  ///
  /// property3.tag  = FT_PARAM_TAG_RANDOM_SEED;
  /// property3.data = &random_seed;
  ///
  /// FT_Face_Properties( face, 3, properties );
  /// ```
  ///
  /// The next example resets a single property to its default value.
  ///
  /// ```
  /// FT_Parameter  property;
  ///
  ///
  /// property.tag  = FT_PARAM_TAG_LCD_FILTER_WEIGHTS;
  /// property.data = NULL;
  ///
  /// FT_Face_Properties( face, 1, &property );
  /// ```
  ///
  /// @since:
  /// 2.8
  int FT_Face_Properties(
    FT_Face face,
    int num_properties,
    ffi.Pointer<FT_Parameter> properties,
  ) {
    return _FT_Face_Properties(
      face,
      num_properties,
      properties,
    );
  }

  late final _FT_Face_PropertiesPtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Face, FT_UInt,
              ffi.Pointer<FT_Parameter>)>>('FT_Face_Properties');
  late final _FT_Face_Properties = _FT_Face_PropertiesPtr.asFunction<
      int Function(FT_Face, int, ffi.Pointer<FT_Parameter>)>();

  /// @function:
  /// FT_Get_Name_Index
  ///
  /// @description:
  /// Return the glyph index of a given glyph name.  This only works
  /// for those faces where @FT_HAS_GLYPH_NAMES returns true.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// glyph_name ::
  /// The glyph name.
  ///
  /// @return:
  /// The glyph index.  0~means 'undefined character code'.
  ///
  /// @note:
  /// Acceptable glyph names might come from the [Adobe Glyph
  /// List](https://github.com/adobe-type-tools/agl-aglfn).  See
  /// @FT_Get_Glyph_Name for the inverse functionality.
  ///
  /// This function has limited capabilities if the config macro
  /// `FT_CONFIG_OPTION_POSTSCRIPT_NAMES` is not defined in `ftoption.h`:
  /// It then works only for fonts that actually embed glyph names (which
  /// many recent OpenType fonts do not).
  int FT_Get_Name_Index(
    FT_Face face,
    ffi.Pointer<FT_String> glyph_name,
  ) {
    return _FT_Get_Name_Index(
      face,
      glyph_name,
    );
  }

  late final _FT_Get_Name_IndexPtr = _lookup<
          ffi
          .NativeFunction<FT_UInt Function(FT_Face, ffi.Pointer<FT_String>)>>(
      'FT_Get_Name_Index');
  late final _FT_Get_Name_Index = _FT_Get_Name_IndexPtr.asFunction<
      int Function(FT_Face, ffi.Pointer<FT_String>)>();

  /// @function:
  /// FT_Get_Glyph_Name
  ///
  /// @description:
  /// Retrieve the ASCII name of a given glyph in a face.  This only works
  /// for those faces where @FT_HAS_GLYPH_NAMES returns true.
  ///
  /// @input:
  /// face ::
  /// A handle to a source face object.
  ///
  /// glyph_index ::
  /// The glyph index.
  ///
  /// buffer_max ::
  /// The maximum number of bytes available in the buffer.
  ///
  /// @output:
  /// buffer ::
  /// A pointer to a target buffer where the name is copied to.
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// An error is returned if the face doesn't provide glyph names or if the
  /// glyph index is invalid.  In all cases of failure, the first byte of
  /// `buffer` is set to~0 to indicate an empty name.
  ///
  /// The glyph name is truncated to fit within the buffer if it is too
  /// long.  The returned string is always zero-terminated.
  ///
  /// Be aware that FreeType reorders glyph indices internally so that glyph
  /// index~0 always corresponds to the 'missing glyph' (called '.notdef').
  ///
  /// This function has limited capabilities if the config macro
  /// `FT_CONFIG_OPTION_POSTSCRIPT_NAMES` is not defined in `ftoption.h`:
  /// It then works only for fonts that actually embed glyph names (which
  /// many recent OpenType fonts do not).
  int FT_Get_Glyph_Name(
    FT_Face face,
    int glyph_index,
    FT_Pointer buffer,
    int buffer_max,
  ) {
    return _FT_Get_Glyph_Name(
      face,
      glyph_index,
      buffer,
      buffer_max,
    );
  }

  late final _FT_Get_Glyph_NamePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(
              FT_Face, FT_UInt, FT_Pointer, FT_UInt)>>('FT_Get_Glyph_Name');
  late final _FT_Get_Glyph_Name = _FT_Get_Glyph_NamePtr.asFunction<
      int Function(FT_Face, int, FT_Pointer, int)>();

  /// @function:
  /// FT_Get_Postscript_Name
  ///
  /// @description:
  /// Retrieve the ASCII PostScript name of a given face, if available.
  /// This only works with PostScript, TrueType, and OpenType fonts.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// @return:
  /// A pointer to the face's PostScript name.  `NULL` if unavailable.
  ///
  /// @note:
  /// The returned pointer is owned by the face and is destroyed with it.
  ///
  /// For variation fonts, this string changes if you select a different
  /// instance, and you have to call `FT_Get_PostScript_Name` again to
  /// retrieve it.  FreeType follows Adobe TechNote #5902, 'Generating
  /// PostScript Names for Fonts Using OpenType Font Variations'.
  ///
  /// https://download.macromedia.com/pub/developer/opentype/tech-notes/5902.AdobePSNameGeneration.html
  ///
  /// [Since 2.9] Special PostScript names for named instances are only
  /// returned if the named instance is set with @FT_Set_Named_Instance (and
  /// the font has corresponding entries in its 'fvar' table or is the
  /// default named instance).  If @FT_IS_VARIATION returns true, the
  /// algorithmically derived PostScript name is provided, not looking up
  /// special entries for named instances.
  ffi.Pointer<ffi.Char> FT_Get_Postscript_Name(
    FT_Face face,
  ) {
    return _FT_Get_Postscript_Name(
      face,
    );
  }

  late final _FT_Get_Postscript_NamePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(FT_Face)>>(
          'FT_Get_Postscript_Name');
  late final _FT_Get_Postscript_Name = _FT_Get_Postscript_NamePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(FT_Face)>();

  /// @function:
  /// FT_Get_SubGlyph_Info
  ///
  /// @description:
  /// Retrieve a description of a given subglyph.  Only use it if
  /// `glyph->format` is @FT_GLYPH_FORMAT_COMPOSITE; an error is returned
  /// otherwise.
  ///
  /// @input:
  /// glyph ::
  /// The source glyph slot.
  ///
  /// sub_index ::
  /// The index of the subglyph.  Must be less than
  /// `glyph->num_subglyphs`.
  ///
  /// @output:
  /// p_index ::
  /// The glyph index of the subglyph.
  ///
  /// p_flags ::
  /// The subglyph flags, see @FT_SUBGLYPH_FLAG_XXX.
  ///
  /// p_arg1 ::
  /// The subglyph's first argument (if any).
  ///
  /// p_arg2 ::
  /// The subglyph's second argument (if any).
  ///
  /// p_transform ::
  /// The subglyph transformation (if any).
  ///
  /// @return:
  /// FreeType error code.  0~means success.
  ///
  /// @note:
  /// The values of `*p_arg1`, `*p_arg2`, and `*p_transform` must be
  /// interpreted depending on the flags returned in `*p_flags`.  See the
  /// OpenType specification for details.
  ///
  /// https://docs.microsoft.com/en-us/typography/opentype/spec/glyf#composite-glyph-description
  int FT_Get_SubGlyph_Info(
    FT_GlyphSlot glyph,
    int sub_index,
    ffi.Pointer<FT_Int> p_index,
    ffi.Pointer<FT_UInt> p_flags,
    ffi.Pointer<FT_Int> p_arg1,
    ffi.Pointer<FT_Int> p_arg2,
    ffi.Pointer<FT_Matrix> p_transform,
  ) {
    return _FT_Get_SubGlyph_Info(
      glyph,
      sub_index,
      p_index,
      p_flags,
      p_arg1,
      p_arg2,
      p_transform,
    );
  }

  late final _FT_Get_SubGlyph_InfoPtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(
              FT_GlyphSlot,
              FT_UInt,
              ffi.Pointer<FT_Int>,
              ffi.Pointer<FT_UInt>,
              ffi.Pointer<FT_Int>,
              ffi.Pointer<FT_Int>,
              ffi.Pointer<FT_Matrix>)>>('FT_Get_SubGlyph_Info');
  late final _FT_Get_SubGlyph_Info = _FT_Get_SubGlyph_InfoPtr.asFunction<
      int Function(FT_GlyphSlot, int, ffi.Pointer<FT_Int>, ffi.Pointer<FT_UInt>,
          ffi.Pointer<FT_Int>, ffi.Pointer<FT_Int>, ffi.Pointer<FT_Matrix>)>();

  /// @function:
  /// FT_Get_FSType_Flags
  ///
  /// @description:
  /// Return the `fsType` flags for a font.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// @return:
  /// The `fsType` flags, see @FT_FSTYPE_XXX.
  ///
  /// @note:
  /// Use this function rather than directly reading the `fs_type` field in
  /// the @PS_FontInfoRec structure, which is only guaranteed to return the
  /// correct results for Type~1 fonts.
  ///
  /// @since:
  /// 2.3.8
  int FT_Get_FSType_Flags(
    FT_Face face,
  ) {
    return _FT_Get_FSType_Flags(
      face,
    );
  }

  late final _FT_Get_FSType_FlagsPtr =
      _lookup<ffi.NativeFunction<FT_UShort Function(FT_Face)>>(
          'FT_Get_FSType_Flags');
  late final _FT_Get_FSType_Flags =
      _FT_Get_FSType_FlagsPtr.asFunction<int Function(FT_Face)>();
